@@ -5,6 +5,7 @@
 2. Tweak maskable icon.
 3. Add a 1024x1024 icon.
 4. Don't add 80x80 icon to HTML for mobile devices.
+5. Only refresh MAI album column if applicable.
 
 5.2.5
 -----
